rest: support glob patterns when listing files
closes reanahub/reana-client#225
