# docs/openapi.json
@@ -1044,6 +1044,13 @@
             "type": "string"
           },
           {
+            "description": "File name(s) (glob) to list.",
+            "in": "query",
+            "name": "file_name",
+            "required": false,
+            "type": "string"
+          },
+          {
             "description": "Results page number (pagination).",
             "in": "query",
             "name": "page",
